--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="image">
-            <img src="/images/26-512.png" alt="">
+            <img src="images/26-512.png" alt="">
         </div>
 
     </section>
@@ -76,7 +76,7 @@
         <div class="row-1">
 
             <div class="image">
-                <img src="/images/26-512.png" alt="">
+                <img src="images/26-512.png" alt="">
             </div>
 
             <div class="content">
@@ -273,17 +273,17 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="/images/search-off-the-record-logo (1).jpg" alt="">
+                <img src="images/search-off-the-record-logo (1).jpg" alt="google search">
                 <h3> project 01 </h3>
                 <div class="icons">
-                    <a href="/Google/google.html" target="_blank" class="fas fa-link"></a>
+                    <a href="Projekty/Google/google.html" target="_blank" class="fas fa-link"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-search"></a>
                 </div>
             </div>
 
             <div class="box">
-                <img src="/images/eshop-logo.png" alt="">
+                <img src="images/eshop-logo.png" target="_blank" alt="e-shop">
                 <h3> project 02 </h3>
                 <div class="icons">
                     <a href="#" class="fas fa-link"></a>
