--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <img src="images/search-off-the-record-logo (1).jpg" alt="google search">
                 <h3> project 01 </h3>
                 <div class="icons">
-                    <a href="Google/google.html" target="_blank" class="fas fa-link"></a>
+                    <a href="projekty/google/google.html" target="_blank" class="fas fa-link"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-search"></a>
                 </div>
