--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <img src="images/eshop-logo.png" target="_blank" alt="e-shop">
                 <h3> project 02 </h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
+                    <a href="projekty/e-shop-final/index.html" class="fas fa-link"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-search"></a>
                 </div>
