--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
                 </div>
 
                 <div class="btn-group">
-                    <div class="btn1">Download CV</div>
-                    <div class="btn2">Contact</div>
+                    <div><a class="btn1" href="#">Download CV</a></div>
+                    <div><a class="btn2" href="#contact">Contact</a></div>
                 </div>
 
                 <div class="socials">
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://github.com/emejarkeiou" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/marko-chudik-7a5472195/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
 
